commit partie teletravail